cleaned up single file a bit.

--- a/nanoGPT_singe_file.ipynb
+++ b/nanoGPT_singe_file.ipynb
@@ -17,20 +17,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YQxIzwuHA5ac",
-        "outputId": "1272bef5-27e3-43db-f38a-4bc30d9ba6ce"
+        "outputId": "fb1a388c-2b80-4e2b-e0bc-49238d7ce2f1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-02-24 20:25:30--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "--2024-03-13 18:33:37--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -39,7 +39,7 @@
             "\n",
             "input.txt           100%[===================>]   1.06M  --.-KB/s    in 0.05s   \n",
             "\n",
-            "2024-02-24 20:25:30 (19.4 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "2024-03-13 18:33:37 (20.7 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
             "\n"
           ]
         }
@@ -61,9 +61,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jBNxJaDJLWKG",
-        "outputId": "1fceb0eb-3719-4059-a7bb-a49d4332ed7c"
+        "outputId": "1e71ae69-7453-40aa-e7db-be6df4fee798"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +80,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -92,12 +92,12 @@
       ],
       "metadata": {
         "id": "sqescrf0Sslj",
-        "outputId": "15139522-d0ab-4140-fe30-54c44a924bff",
+        "outputId": "c6c28986-793f-48d2-fe24-d532083d4666",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,7 +107,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "72Nj51EWBerM"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "6cW-0hUISacU"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -208,9 +208,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fOS99UXYBjIZ",
-        "outputId": "a5bfabb5-230d-44a1-8cfc-862c12b4f8f1"
+        "outputId": "dd517798-ec71-496d-f616-322d4667c77c"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,7 +224,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-6-6c607b0378a8>:24: UserWarning: Explicitly requested dtype <class 'jax.numpy.int64'> requested in array is not available, and will be truncated to dtype int32. To enable more dtypes, set the jax_enable_x64 configuration option or the JAX_ENABLE_X64 shell environment variable. See https://github.com/google/jax#current-gotchas for more.\n",
+            "<ipython-input-7-6c607b0378a8>:24: UserWarning: Explicitly requested dtype <class 'jax.numpy.int64'> requested in array is not available, and will be truncated to dtype int32. To enable more dtypes, set the jax_enable_x64 configuration option or the JAX_ENABLE_X64 shell environment variable. See https://github.com/google/jax#current-gotchas for more.\n",
             "  data = jnp.array(encode(text, stoi), dtype=jnp.int64)\n"
           ]
         }
@@ -233,24 +233,7 @@
     {
       "cell_type": "code",
       "source": [
-        "class FeedForward(nn.Module):\n",
-        "  output_size: int\n",
-        "\n",
-        "  def setup(self):\n",
-        "    # **new**: attention paper uses 4 times token_info_size when doing linear transformation.\n",
-        "    # and then projects it back to token_info_size in linear transformation layer.\n",
-        "    self.ffwd = nn.Dense(features=4 * self.output_size)\n",
-        "\n",
-        "    # **new**: projection layer, which goes back into residual pathway.\n",
-        "    self.projection = nn.Dense(self.output_size)\n",
-        "\n",
-        "  def __call__(self, x, training: bool):\n",
-        "    x = nn.relu(self.ffwd(x))\n",
-        "    x = self.projection(x)\n",
-        "    return x\n",
-        "\n",
-        "\n",
-        "class Head(nn.Module):\n",
+        "class SingleHeadAttention(nn.Module):\n",
         "  token_info_size: int # head_size; how much (emb dim) info each token emits for keys, queries, values.\n",
         "  T: int # block size; number of tokens in a block\n",
         "\n",
@@ -266,7 +249,6 @@
         "\n",
         "  def __call__(self, block_of_tokens_with_info_channels: jnp.array, training: bool):\n",
         "    \"\"\"Accepts a block of tokens with info channels, like (8, 65).\"\"\"\n",
-        "\n",
         "    # TODO(ntnsonti): Double check; but tril should not be learnable according cGPT.\n",
         "    tril = jnp.tril(jnp.ones(shape=(self.T, self.T)))\n",
         "\n",
@@ -278,7 +260,6 @@
         "\n",
         "    # chanel info size\n",
         "    C = int(block_of_tokens_with_info_channels.shape[-1])\n",
-        "    # print(\"[ntn99] channel_info_size: \", C)\n",
         "\n",
         "    # compute attention score.\n",
         "    wei = jnp.dot(queries, keys.T) * C**0.5 # (T, token_info_size) * (token_info_size, T) == (T, T)\n",
@@ -300,7 +281,7 @@
         "  def setup(self):\n",
         "    self.token_info_size_per_head = int(self.final_token_info_size/self.num_heads)\n",
         "    self.heads = [\n",
-        "        Head(token_info_size=self.token_info_size_per_head, T=self.T) for _ in range(self.num_heads)\n",
+        "        SingleHeadAttention(token_info_size=self.token_info_size_per_head, T=self.T) for _ in range(self.num_heads)\n",
         "    ]\n",
         "\n",
         "    self.projection = nn.Dense(features=self.final_token_info_size)\n",
@@ -319,8 +300,21 @@
         "\n",
         "    return self.dropout(projection, deterministic=not training)\n",
         "\n",
+        "class FeedForward(nn.Module):\n",
+        "  output_size: int\n",
         "\n",
-        "class Block(nn.Module):\n",
+        "  def setup(self):\n",
+        "    # Attention paper uses 4 times token_info_size when doing linear transformation\n",
+        "    # and then projects it back to token_info_size in linear transformation layer.\n",
+        "    self.ffwd = nn.Dense(features=4 * self.output_size)\n",
+        "    self.projection = nn.Dense(self.output_size)\n",
+        "\n",
+        "  def __call__(self, x, training: bool):\n",
+        "    x = nn.relu(self.ffwd(x))\n",
+        "    x = self.projection(x)\n",
+        "    return x\n",
+        "\n",
+        "class TransformerEncoderBlock(nn.Module):\n",
         "  num_heads: int\n",
         "  final_token_info_size: int\n",
         "  T: int\n",
@@ -347,9 +341,17 @@
         "    # print(\"[ntn99] input size after computation (end of block): \", x.shape)\n",
         "\n",
         "    x = self.dropout(x, deterministic=not training)\n",
-        "    return x\n",
-        "\n",
-        "\n",
+        "    return x"
+      ],
+      "metadata": {
+        "id": "UUzSsxUPB5DK"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "class LanguageModel(nn.Module):\n",
         "  \"\"\"Reads one char and predicits the next char.\"\"\"\n",
         "  vocab_size: int # number of vocabulary (number of rows of embedding table)\n",
@@ -370,7 +372,7 @@
         "    # self.self_attention_heads = MultiHeadAttention(num_heads=4, final_token_info_size=self.n_embed, T=self.T)\n",
         "    self.num_blocks = 4\n",
         "    self.blocks = [\n",
-        "        Block(num_heads=4, final_token_info_size=self.n_embed, T=self.T) for _ in range(self.num_blocks)\n",
+        "        TransformerEncoderBlock(num_heads=4, final_token_info_size=self.n_embed, T=self.T) for _ in range(self.num_blocks)\n",
         "    ]\n",
         "    self.ln = nn.LayerNorm()\n",
         "    self.lang_model_head = nn.Dense(features=self.C)\n",
@@ -407,9 +409,9 @@
         "    return token_logits\n"
       ],
       "metadata": {
-        "id": "UUzSsxUPB5DK"
+        "id": "WOkGMx7VIknF"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -433,7 +435,7 @@
       "metadata": {
         "id": "3QM-Xtp1ZOcI"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -464,7 +466,7 @@
       "metadata": {
         "id": "7e9M7_uLZ1VR"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -484,9 +486,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sFzsWcLnnw0X",
-        "outputId": "2f8278a7-2291-49b8-f2c7-7900768ba62d"
+        "outputId": "eb8a2e6a-2bc0-4c08-8ab6-468ba6b10850"
       },
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,7 +540,7 @@
       "metadata": {
         "id": "uBDpQdLOonWU"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,7 +553,7 @@
       "metadata": {
         "id": "uQ48Hzj8ojqk"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -582,7 +584,7 @@
         "id": "n-vBXHpbocO9",
         "outputId": "005fb748-1a94-4890-ebe3-335a778f00b7"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
