using more standard terminology -- head_size and num_heads (instead of token_info_size and final_token_info_size)

--- a/nanoGPT_singe_file.ipynb
+++ b/nanoGPT_singe_file.ipynb
@@ -233,18 +233,54 @@
     {
       "cell_type": "code",
       "source": [
+        "class SingleExampleMultiHeadSelfAttention(nn.Module):\n",
+        "    num_heads: int\n",
+        "    projection_dim: int\n",
+        "\n",
+        "    @nn.compact\n",
+        "    def __call__(self, x):\n",
+        "        # x shape: (seq_len, projection_dim)\n",
+        "        query = nn.Dense(self.projection_dim)(x)\n",
+        "        key = nn.Dense(self.projection_dim)(x)\n",
+        "        value = nn.Dense(self.projection_dim)(x)\n",
+        "\n",
+        "        query = query.reshape((self.num_heads, self.projection_dim // self.num_heads))\n",
+        "        key = key.reshape((self.num_heads, self.projection_dim // self.num_heads))\n",
+        "        value = value.reshape((self.num_heads, self.projection_dim // self.num_heads))\n",
+        "\n",
+        "        attention_scores = jnp.einsum('hd,Hd->hH', query, key) / jnp.sqrt(self.projection_dim)\n",
+        "        attention_weights = nn.softmax(attention_scores, axis=-1)\n",
+        "        attention_output = jnp.einsum('hH,Hd->hd', attention_weights, value)\n",
+        "        attention_output = attention_output.reshape((self.num_heads * (self.projection_dim // self.num_heads)))\n",
+        "\n",
+        "        output = nn.Dense(self.projection_dim)(attention_output)\n",
+        "        return output\n",
+        "\n",
+        "# Vectorize the single-example module to handle batches\n",
+        "# batch_multi_head_self_attention = jax.vmap(SingleExampleMultiHeadSelfAttention(num_heads=8, projection_dim=64), in_axes=0, out_axes=0)"
+      ],
+      "metadata": {
+        "id": "njCIqlWvPHzA"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "class SingleHeadAttention(nn.Module):\n",
-        "  token_info_size: int # head_size; how much (emb dim) info each token emits for keys, queries, values.\n",
+        "  head_size: int # token_info_size; how much (emb dim) info each token emits for keys, queries, values.\n",
         "  T: int # block size; number of tokens in a block\n",
         "\n",
         "  def setup(self):\n",
         "    # key, query will take vector of size C.\n",
-        "    # i.e., channels containing info of token and will output token_info_size\n",
-        "    self.key_layer = nn.Dense(self.token_info_size, use_bias=False)\n",
-        "    self.query_layer = nn.Dense(self.token_info_size, use_bias=False)\n",
-        "    self.value_layer = nn.Dense(self.token_info_size, use_bias=False)\n",
+        "    # i.e., channels containing info of token and will output head_size\n",
+        "    self.key_layer = nn.Dense(self.head_size, use_bias=False)\n",
+        "    self.query_layer = nn.Dense(self.head_size, use_bias=False)\n",
+        "    self.value_layer = nn.Dense(self.head_size, use_bias=False)\n",
         "\n",
         "    self.dropout = nn.Dropout(rate=0.2)\n",
+        "\n",
         "\n",
         "\n",
         "  def __call__(self, block_of_tokens_with_info_channels: jnp.array, training: bool):\n",
@@ -252,8 +288,8 @@
         "    # TODO(ntnsonti): Double check; but tril should not be learnable according cGPT.\n",
         "    tril = jnp.tril(jnp.ones(shape=(self.T, self.T)))\n",
         "\n",
-        "    # input: (T, info channels )\n",
-        "    # output: (T, token_info_size)\n",
+        "    # input: (T, info channels)\n",
+        "    # output: (T, head_size)\n",
         "    keys = self.key_layer(block_of_tokens_with_info_channels)\n",
         "    queries = self.query_layer(block_of_tokens_with_info_channels)\n",
         "    values = self.value_layer(block_of_tokens_with_info_channels)\n",
@@ -262,29 +298,29 @@
         "    C = int(block_of_tokens_with_info_channels.shape[-1])\n",
         "\n",
         "    # compute attention score.\n",
-        "    wei = jnp.dot(queries, keys.T) * C**0.5 # (T, token_info_size) * (token_info_size, T) == (T, T)\n",
+        "    wei = jnp.dot(queries, keys.T) * C**0.5 # (T, head_size) * (head_size, T) == (T, T)\n",
         "    wei = jnp.where(tril==0, -jnp.inf, wei)\n",
         "    wei = nn.softmax(wei, axis=-1)\n",
         "\n",
-        "    attention_values = jnp.dot(wei, values) # (T, T) * (T, token_info_size))\n",
+        "    attention_values = jnp.dot(wei, values) # (T, T) * (T, head_size))\n",
         "\n",
         "    attention_values = self.dropout(attention_values, deterministic=not training)\n",
         "\n",
-        "    return attention_values # (T, token_info_size)\n",
+        "    return attention_values # (T, head_size)\n",
         "\n",
         "\n",
         "class MultiHeadAttention(nn.Module):\n",
         "  num_heads: int\n",
-        "  final_token_info_size: int # After concatenating from all heads, how much info (values -- emb size) you have on each token.\n",
+        "  head_size: int # head_size * num_heads is the final embedding dimension you get, after concatenating from all heads\n",
         "  T: int\n",
         "\n",
         "  def setup(self):\n",
-        "    self.token_info_size_per_head = int(self.final_token_info_size/self.num_heads)\n",
         "    self.heads = [\n",
-        "        SingleHeadAttention(token_info_size=self.token_info_size_per_head, T=self.T) for _ in range(self.num_heads)\n",
+        "        SingleHeadAttention(head_size=self.head_size, T=self.T) for _ in range(self.num_heads)\n",
         "    ]\n",
         "\n",
-        "    self.projection = nn.Dense(features=self.final_token_info_size)\n",
+        "    final_output_size = self.num_heads * self.head_size\n",
+        "    self.projection = nn.Dense(features=final_output_size)\n",
         "\n",
         "    self.dropout = nn.Dropout(rate=0.2)\n",
         "\n",
@@ -316,17 +352,18 @@
         "\n",
         "class TransformerEncoderBlock(nn.Module):\n",
         "  num_heads: int\n",
-        "  final_token_info_size: int\n",
+        "  output_size: int # final_token_info_size; head_size * num_heads is the final embedding dimension you get, after concatenating from all heads\n",
         "  T: int\n",
         "\n",
         "  def setup(self):\n",
         "    # communication.\n",
+        "    self.head_size = self.output_size // self.num_heads  # each SingleAttentionHead will produce head_size worth of info for key, value, querie. You concatenate all of them to get the final n_embed.\n",
         "    self.self_attention_heads = MultiHeadAttention(num_heads=self.num_heads,\n",
-        "                                                   final_token_info_size=self.final_token_info_size,\n",
+        "                                                   head_size = self.head_size,\n",
         "                                                   T=self.T)\n",
         "\n",
         "    # computation.\n",
-        "    self.computation_layer = FeedForward(output_size=self.final_token_info_size)\n",
+        "    self.computation_layer = FeedForward(output_size=self.output_size)\n",
         "\n",
         "    self.ln1 = nn.LayerNorm()\n",
         "    self.ln2 = nn.LayerNorm()\n",
@@ -335,10 +372,8 @@
         "\n",
         "  def __call__(self, x, training: bool):\n",
         "    x = x + self.self_attention_heads(self.ln1(x), training)\n",
-        "    # print(\"[ntn99] input size after attention_head: \", x.shape)\n",
         "\n",
         "    x = x + self.computation_layer(self.ln2(x), training)\n",
-        "    # print(\"[ntn99] input size after computation (end of block): \", x.shape)\n",
         "\n",
         "    x = self.dropout(x, deterministic=not training)\n",
         "    return x"
@@ -346,7 +381,7 @@
       "metadata": {
         "id": "UUzSsxUPB5DK"
       },
-      "execution_count": 9,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -366,27 +401,25 @@
         "\n",
         "    self.pos_embedding_table = nn.Embed(num_embeddings=self.T, features=self.n_embed)\n",
         "\n",
-        "    # *** new ***\n",
         "    # Since, there are 4 heads, each head only needs to output token_info of size 8.\n",
         "    # Concantenate token_info from all 4 heards, gives us 32\n",
-        "    # self.self_attention_heads = MultiHeadAttention(num_heads=4, final_token_info_size=self.n_embed, T=self.T)\n",
         "    self.num_blocks = 4\n",
         "    self.blocks = [\n",
-        "        TransformerEncoderBlock(num_heads=4, final_token_info_size=self.n_embed, T=self.T) for _ in range(self.num_blocks)\n",
+        "        TransformerEncoderBlock(num_heads=4,\n",
+        "                                output_size=self.n_embed,\n",
+        "                                T=self.T) for _ in range(self.num_blocks)\n",
         "    ]\n",
         "    self.ln = nn.LayerNorm()\n",
         "    self.lang_model_head = nn.Dense(features=self.C)\n",
         "\n",
         "  def __call__(self, block_of_tokens: jnp.array, training: bool):\n",
         "    \"\"\"Accepts a block of tokens, like [0, 1, 2, 3, 4, 5, 6, 7].\"\"\"\n",
-        "\n",
-        "    # generate em for each token. output: (T, n_embed)\n",
+        "    # generate emb for each token. output: (T, n_embed)\n",
         "    token_embs = self.token_embedding_table(block_of_tokens)\n",
         "\n",
         "    # generate position embs for each token.\n",
-        "    ## get token positions.\n",
+        "    # get token positions.\n",
         "\n",
-        "    # TODO(ntnsonti): setting num_pos to T always\n",
         "    # num_pos = block_of_tokens.shape[0]\n",
         "    num_pos = T\n",
         "    positions = jnp.arange(0, num_pos)\n",
@@ -411,7 +444,7 @@
       "metadata": {
         "id": "WOkGMx7VIknF"
       },
-      "execution_count": 10,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -435,7 +468,7 @@
       "metadata": {
         "id": "3QM-Xtp1ZOcI"
       },
-      "execution_count": 11,
+      "execution_count": 26,
       "outputs": []
     },
     {
