updated to use trainer.py

--- a/nanoGPT_singe_file.ipynb
+++ b/nanoGPT_singe_file.ipynb
@@ -36,43 +36,21 @@
       "metadata": {
         "id": "72Nj51EWBerM"
       },
-      "execution_count": 96,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "import jax.tools.colab_tpu\n",
-        "jax.tools.colab_tpu.setup_tpu()\n",
-        "jax.devices()"
+        "# import jax.tools.colab_tpu\n",
+        "# jax.tools.colab_tpu.setup_tpu()\n",
+        "# jax.devices()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jBNxJaDJLWKG",
-        "outputId": "ba9d0eb6-5fcd-4d81-a681-ec3c2bcf616c"
+        "id": "jBNxJaDJLWKG"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[TpuDevice(id=0, process_index=0, coords=(0,0,0), core_on_chip=0),\n",
-              " TpuDevice(id=1, process_index=0, coords=(0,0,0), core_on_chip=1),\n",
-              " TpuDevice(id=2, process_index=0, coords=(1,0,0), core_on_chip=0),\n",
-              " TpuDevice(id=3, process_index=0, coords=(1,0,0), core_on_chip=1),\n",
-              " TpuDevice(id=4, process_index=0, coords=(0,1,0), core_on_chip=0),\n",
-              " TpuDevice(id=5, process_index=0, coords=(0,1,0), core_on_chip=1),\n",
-              " TpuDevice(id=6, process_index=0, coords=(1,1,0), core_on_chip=0),\n",
-              " TpuDevice(id=7, process_index=0, coords=(1,1,0), core_on_chip=1)]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ]
+      "execution_count": 5,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -82,12 +60,12 @@
       ],
       "metadata": {
         "id": "sqescrf0Sslj",
-        "outputId": "b095dc70-4a1a-4498-b357-dd0665c49a45",
+        "outputId": "92cf26e3-cdee-46e1-da90-ae2f42dc966f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 98,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -97,31 +75,30 @@
             ]
           },
           "metadata": {},
-          "execution_count": 98
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "%ls     # chanel info size\n",
-        "    C = int(tokens.shape[-1])\n"
+        "%ls     # chanel info size"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JHFANuKyilVM",
-        "outputId": "298e4053-c50b-431c-99a3-fc705c148fef"
+        "outputId": "5f9637ba-9fc3-4e15-ff54-b028e92558ad"
       },
-      "execution_count": 99,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[0m\u001b[01;34massets\u001b[0m/  dataset.py  LICENSE   nanoGPT_JAX_JAX_JAX.ipynb  \u001b[01;34m__pycache__\u001b[0m/  trainer.py\n",
-            "\u001b[01;34mdata\u001b[0m/    input.txt   model.py  nanoGPT_singe_file.ipynb   README.md\n"
+            "\u001b[0m\u001b[01;34massets\u001b[0m/  dataset.py  model.py                   nanoGPT_singe_file.ipynb  trainer.py\n",
+            "\u001b[01;34mdata\u001b[0m/    LICENSE     nanoGPT_JAX_JAX_JAX.ipynb  README.md\n"
           ]
         }
       ]
@@ -133,42 +110,40 @@
         "\n",
         "import dataset\n",
         "import model\n",
+        "import trainer\n",
         "\n",
         "importlib.reload(dataset)\n",
-        "importlib.reload(model)"
+        "importlib.reload(model)\n",
+        "importlib.reload(trainer)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "m3Lwn46KOkxx",
-        "outputId": "0d595a86-6074-492f-a49a-d9e7d61336db"
+        "outputId": "bf90cc08-42e8-402f-eb15-bf7f6c975d47"
       },
-      "execution_count": 101,
+      "execution_count": 23,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/content/nanoGPT-JAX-JAX-JAX/dataset.py:49: UserWarning: Explicitly requested dtype <class 'jax.numpy.int64'> requested in array is not available, and will be truncated to dtype int32. To enable more dtypes, set the jax_enable_x64 configuration option or the JAX_ENABLE_X64 shell environment variable. See https://github.com/google/jax#current-gotchas for more.\n",
+            "  data = jnp.array(_encode(text, self.stoi), dtype=jnp.int64)\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<module 'model' from '/content/nanoGPT-JAX-JAX-JAX/model.py'>"
+              "<module 'trainer' from '/content/nanoGPT-JAX-JAX-JAX/trainer.py'>"
             ]
           },
           "metadata": {},
-          "execution_count": 101
+          "execution_count": 23
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "BATCH_SIZE = 8\n",
-        "BLOCK_SIZE = 16"
-      ],
-      "metadata": {
-        "id": "pQwCDUA2fs_I"
-      },
-      "execution_count": 9,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -178,104 +153,28 @@
       "metadata": {
         "id": "klG0YRl_cWHp"
       },
-      "execution_count": 27,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "class TrainState(train_state.TrainState):\n",
-        "  key: jax.random.KeyArray\n",
-        "\n",
-        "T = BLOCK_SIZE\n",
-        "random_key = jax.random.PRNGKey(99)\n",
-        "random_key, random_subkey = jax.random.split(random_key)\n",
-        "\n",
-        "lm_model = model.LanguageModel(vocab_size=65, n_embed=48, T=BLOCK_SIZE)\n",
-        "\n",
-        "# Now, our language model needs to accept a block of tokens, not one-char at a time.\n",
-        "# We'll then make it accept a batch of blocks of tokens using vmap.\n",
-        "sample_block_of_tokens = jnp.ones(shape=(T), dtype=jnp.int32)\n",
-        "output, params = lm_model.init_with_output(jrand.PRNGKey(99), sample_block_of_tokens, training=False)\n",
-        "params = params[\"params\"]\n"
+        "trainer.run_train_step()"
       ],
       "metadata": {
-        "id": "3QM-Xtp1ZOcI",
+        "id": "IHMmuzHoOc8l",
+        "outputId": "8938ada4-d873-4f1f-ab5b-ede4e1ccea0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "136da058-ec00-4e55-f716-4abfef21f446"
-      },
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-56-798feb8f12c7>:2: DeprecationWarning: jax.random.KeyArray is deprecated. Use jax.Array for annotations, and jax.dtypes.issubdtype(arr.dtype, jax.dtypes.prng_key) for runtime detection of typed prng keys (i.e. keys created with jax.random.key).\n",
-            "For more information, see https://jax.readthedocs.io/en/latest/jep/9263-typed-keys.html\n",
-            "  key: jax.random.KeyArray\n"
-          ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def model_apply(params, inputs):\n",
-        "  dropout_key = jax.random.PRNGKey(0) # TODO need to fix this.\n",
-        "  return lm_model.apply({\"params\": params}, inputs, False, rngs={'dropout': dropout_key})\n",
-        "\n",
-        "model_apply_batch = jax.vmap(model_apply, in_axes=(None, 0), out_axes=(0))\n",
-        "\n",
-        "def forward_pass(params, state, batch):\n",
-        "  inputs, targets = batch\n",
-        "  logits = state.apply_fn(params, inputs)\n",
-        "  loss = optax.softmax_cross_entropy_with_integer_labels(logits, targets)\n",
-        "  loss = loss.mean()\n",
-        "  return los\n",
-        "\n",
-        "def train_step(state, batch):\n",
-        "  grad_fn = jax.value_and_grad(forward_pass, argnums=(0))  # differentiate wrt 0th pos argument.\n",
-        "  loss, grads = grad_fn(state.params, state, batch)\n",
-        "  state = state.apply_gradients(grads=grads)\n",
-        "  return state, loss\n",
-        "\n",
-        "opt = optax.adam(learning_rate=0.0001)\n",
-        "state = TrainState.create(apply_fn=model_apply_batch, params=params, tx=opt, key=random_key)"
-      ],
-      "metadata": {
-        "id": "7e9M7_uLZ1VR"
       },
-      "execution_count": 54,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for epoch in range(1):\n",
-        "  batch = data.get_batch()\n",
-        "\n",
-        "  random_key, random_subkey = jax.random.split(random_key)\n",
-        "  dropout_key = jax.random.fold_in(key=random_key, data=state.step)\n",
-        "\n",
-        "  state, loss = train_step(state, batch)\n",
-        "  print(\"loss\", loss, \"epoch\", epoch) if epoch%100==0 else None"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sFzsWcLnnw0X",
-        "outputId": "dc3c4e00-285e-4f5e-ccf8-a04fd86816ff"
-      },
-      "execution_count": 55,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "loss 4.497095 epoch 0\n"
+            "loss 4.74829 epoch 0\n"
           ]
         }
       ]
@@ -322,7 +221,7 @@
       "metadata": {
         "id": "9ZyBx0FtoHCT"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -336,7 +235,7 @@
       "metadata": {
         "id": "oqRFw2VpoPOO"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -351,7 +250,7 @@
       "metadata": {
         "id": "XSbv5LgaoJBb"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -367,7 +266,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
