--- a/nanoGPT_singe_file.ipynb
+++ b/nanoGPT_singe_file.ipynb
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "72Nj51EWBerM"
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "jBNxJaDJLWKG"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -60,12 +60,12 @@
       ],
       "metadata": {
         "id": "sqescrf0Sslj",
-        "outputId": "92cf26e3-cdee-46e1-da90-ae2f42dc966f",
+        "outputId": "69c4f2c4-5568-489d-e381-1c6376a93e4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -75,7 +75,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 3
         }
       ]
     },
@@ -89,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JHFANuKyilVM",
-        "outputId": "5f9637ba-9fc3-4e15-ff54-b028e92558ad"
+        "outputId": "0b5eccc8-e619-46db-9224-0fb97e660e9b"
       },
       "execution_count": 7,
       "outputs": [
@@ -97,8 +97,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[0m\u001b[01;34massets\u001b[0m/  dataset.py  model.py                   nanoGPT_singe_file.ipynb  trainer.py\n",
-            "\u001b[01;34mdata\u001b[0m/    LICENSE     nanoGPT_JAX_JAX_JAX.ipynb  README.md\n"
+            "\u001b[0m\u001b[01;34mnanoGPT-JAX-JAX-JAX\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
           ]
         }
       ]
@@ -110,29 +109,46 @@
         "\n",
         "import dataset\n",
         "import model\n",
-        "import trainer\n",
         "\n",
         "importlib.reload(dataset)\n",
-        "importlib.reload(model)\n",
-        "importlib.reload(trainer)"
+        "importlib.reload(model)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "m3Lwn46KOkxx",
-        "outputId": "bf90cc08-42e8-402f-eb15-bf7f6c975d47"
+        "outputId": "a49f5635-c498-4d82-fbcd-a45a5413dafc"
       },
-      "execution_count": 23,
+      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/content/nanoGPT-JAX-JAX-JAX/dataset.py:49: UserWarning: Explicitly requested dtype <class 'jax.numpy.int64'> requested in array is not available, and will be truncated to dtype int32. To enable more dtypes, set the jax_enable_x64 configuration option or the JAX_ENABLE_X64 shell environment variable. See https://github.com/google/jax#current-gotchas for more.\n",
-            "  data = jnp.array(_encode(text, self.stoi), dtype=jnp.int64)\n"
-          ]
-        },
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<module 'model' from '/content/nanoGPT-JAX-JAX-JAX/model.py'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import trainer\n",
+        "importlib.reload(trainer)"
+      ],
+      "metadata": {
+        "id": "gHe8a2aBR5S6",
+        "outputId": "6ecbae42-c2c2-4f0a-c952-554069e31af1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
         {
           "output_type": "execute_result",
           "data": {
@@ -141,20 +157,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 22
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data = dataset.Dataset()"
-      ],
-      "metadata": {
-        "id": "klG0YRl_cWHp"
-      },
-      "execution_count": 12,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -162,19 +167,20 @@
         "trainer.run_train_step()"
       ],
       "metadata": {
-        "id": "IHMmuzHoOc8l",
-        "outputId": "8938ada4-d873-4f1f-ab5b-ede4e1ccea0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IHMmuzHoOc8l",
+        "outputId": "844271f7-bf8a-4d14-8b10-978831c45403"
       },
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "loss 4.74829 epoch 0\n"
+            "loss 4.74829 epoch 0\n",
+            "loss 4.8174706 epoch 1\n"
           ]
         }
       ]
